src/objects/FF_Integration_Batch_Schedule_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Maintain settings for FF Integrations Schedules.  Record names should match the Apex Class Name of the Schedulable implementaion</description>
    <fields>
        <fullName>Batch_Apex_Class_Name__c</fullName>
        <description>Name of the Apex Batch class to call for the scheduled integrations.  Must implement Database.Batchable&lt;sObject&gt;</description>
        <inlineHelpText>Name of the Apex Batch class to call for the scheduled integrations.  Must implement Database.Batchable&lt;sObject&gt;</inlineHelpText>
        <label>Batch Apex Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <description>Number of records to be passed into the execute method for batch processing. Expected to be a number between 1 and 200.</description>
        <inlineHelpText>Number of records to be passed into the execute method for batch processing. Expected to be a number between 1 and 200.</inlineHelpText>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked allows the configured job settings to start and stop through the SYSTEM console commands: FFIntegrationBatchSchedule.start();   FFIntegrationBatchSchedule.stop();</description>
        <inlineHelpText>When checked allows the configured job settings to start and stop through the SYSTEM console commands: FFIntegrationBatchSchedule.start();   FFIntegrationBatchSchedule.stop();</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule_Cron__c</fullName>
        <description>Cron Expression for specifying when the schedulable implementation should execute</description>
        <inlineHelpText>Cron Expression for specifying when the schedulable implementation should execute</inlineHelpText>
        <label>Schedule Cron</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FF Integration Batch Schedule Settings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Is_Active__c</columns>
        <columns>Batch_Apex_Class_Name__c</columns>
        <columns>Batch_Size__c</columns>
        <columns>Description__c</columns>
        <columns>Schedule_Cron__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>